--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ahooks": "^3.8.0",
+    "antd": "^5.19.1",
     "class-variance-authority": "^0.7.0",
     "echarts": "^5.5.1",
     "next": "14.2.5",
@@ -19,6 +20,7 @@
     "use-media": "^1.5.0"
   },
   "devDependencies": {
+    "@ant-design/cssinjs": "^1.21.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
